<resources>
    <string name="app_name">FavorApp</string>
    <string name="title_activity_navigation">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="email">E-mail</string>
    <string name="password">Contraseña</string>
    <string name="ConfirmPassword">Confirmar contraseña</string>
    <string name="name">Nombre:</string>
    <string name="points">Puntos:</string>
    <string name="description">Descripción:</string>
    <string name="Favors">Favores:</string>
    <string name="profile">Perfil</string>
    <string name="register">¡Regístrate!</string>
    <string name="Ingresar">Ingresar</string>
    <string name="AddFavor">Agregar favor</string>
    <string name="action_edit">Editar</string>
    <string name="action_delete">Eliminar</string>
    <string name="Favor">Tipo de favor</string>
    <string-array name="favores">
        <item>Favor fácil</item>
        <item>Favor medio</item>
        <item>Favor complejo</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
