<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    style="@style/AppThemea"
    tools:context="com.example.usuario.favorapp.ActivityLogin">

    <TextView
        android:layout_marginTop="25dp"
        android:fontFamily="@font/the_breakdown"
        android:textAlignment="center"
        android:textSize="65sp"
        android:textColor="@color/colorAccent"
        android:text="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="70dp"
        android:textColor="@color/black"
        android:labelFor="@id/tvMail"
        android:text="@string/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/tvMail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:includeFontPadding="false"
        android:inputType="textEmailAddress" />
    <LinearLayout
        android:id="@+id/llCompleteName"
        android:visibility="gone"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="80dp">
        <TextView
            android:labelFor="@id/tvConfirmPassword"
            android:textColor="@color/black"
            android:text="Nombre completo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/tvCompleteName"
            android:layout_width="match_parent"
            android:layout_height="50dp" />
    </LinearLayout>
    <TextView
        android:labelFor="@id/tvPassword"
        android:textColor="@color/black"
        android:text="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/tvPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textPassword" />
    <LinearLayout
        android:id="@+id/llConfirmPassword"
        android:visibility="gone"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="80dp">
        <TextView
            android:labelFor="@id/tvConfirmPassword"
            android:textColor="@color/black"
            android:text="@string/ConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/tvConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPassword" />
    </LinearLayout>
    <LinearLayout
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_margin="10dp"
            android:background="#C1C1C1"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/Ingresar"
            android:id="@+id/btnA"/>
        <Button
            android:layout_margin="10dp"
            android:background="#C1C1C1"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/register"
            android:id="@+id/btnRegister"/>
    </LinearLayout>
    <Button
        android:visibility="gone"
        android:layout_margin="10dp"
        android:background="#C1C1C1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/register"
        android:id="@+id/btnRegistrar"/>

</LinearLayout>