<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".Fragments.AgregarFavorFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:textAlignment="center"
            android:textSize="35sp"
            android:textColor="@color/colorAccent"
            android:text="@string/AddFavor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginTop="30dp"
            android:labelFor="@id/tvPassword"
            android:textColor="@color/black"
            android:text="@string/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/tvPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPassword" />
        <TextView
            android:labelFor="@id/tvDescription"
            android:textColor="@color/black"
            android:text="@string/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:layout_marginTop="10dp"
            android:background="@color/colorGrey"
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:inputType="textMultiLine"
            android:longClickable="false" />
        <Button
            android:id="@+id/btnAddFavor"
            android:layout_marginTop="50dp"
            android:text="@string/AddFavor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</FrameLayout>